[package]
name = "proc_macro2_helper"
version = "0.2.7"
authors = ["Jasper Visser <jasperav@hotmail.com>"]
edition = "2018"
description = "Various utility code to extract data that can be used with proc macro2"
readme = "README.md"
keywords = ["macro", "proc_macro2"]
license = "MIT/Apache-2.0"
repository = "https://github.com/jasperav/proc_macro2_helper"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["extra-traits", "full"] }